<resources>
    <string name="app_name">Fitness</string>
    <string name="title_home">TRANG CHỦ</string>
    <string name="title_exercise">BÀI TẬP</string>
    <string name="search">Tìm kiếm</string>
    <string name="calories">%skcal</string>
    <string name="timer">%s</string>
    <string name="plan">KẾ HOẠCH TẬP LUYỆN</string>
    <string name="count_exercise">%s Bài Tập</string>
    <string name="sets">%s sets</string>
    <string name="count">Đã chọn: %s</string>
    <string name="meal_category">DANH SÁCH CÁC THỰC PHẨM, LƯỢNG CALORIES</string>
    <string name="sport_category">THỰC PHẨM DINH DƯỠNG THỂ THAO</string>
    <string name="my_meal_plan">CHẾ ĐỘ ĂN UỐNG CỦA TÔI</string>
    <string name="protein">Protein: %s</string>
    <string name="count_food">%s food</string>
    <string name="count_foods">%s foods</string>
    <string name="langgue">Ngôn ngữ</string>
    <string name="th_nh_t_ch">THÀNH TÍCH</string>
    <string name="th_m_b_i_t_p">THÊM BÀI TẬP</string>
    <string name="h_y_b">Hủy bỏ</string>
    <string name="th_m">Thêm</string>
    <string name="th_m_l_i_nh_c">THÊM LỜI NHẮC</string>
    <string name="ng_y">Ngày</string>
    <string name="th_i_gian">Thời gian</string>
    <string name="ch_l_i_nh_c">Chế độ lời nhắc</string>
    <string name="b_t_th_ng_b_o">Bật thông báo</string>
    <string name="th_m_ghi_ch">Thêm ghi chú</string>
    <string name="t_o_l_i_nh_c">TẠO LỜI NHẮC</string>
    <string name="h_ng_d_n">Hướng dẫn</string>
    <string name="th_m_v_o_ch_dinh_d_ng">Thêm Vào Chế Độ Dinh Dưỡng</string>
    <string name="ch_t_p_luy_n">CHẾ ĐỘ TẬP LUYỆN</string>
    <string name="d_ng">Dừng</string>
    <string name="ch_dinh_d_ng">CHẾ ĐỘ DINH DƯỠNG</string>
    <string name="k_ho_ch_n">Kế HOẠCH ĂN</string>
    <string name="t_c_ng">Tác động:</string>
    <string name="nh_ng_l_i_ch_ch_nh">Những lợi ích chính:</string>
    <string name="theo_d_i_ch_n_u_ng">THEO DÕI CHẾ ĐỘ ĂN UỐNG</string>
    <string name="t_m_ki_m_n_u_ng_l_nh_m_nh_ho_c">Tìm kiếm, ăn uống lành mạnh hoặc</string>
    <string name="t_o_ra_ch_n_u_ng_c_a_ri_ng_b_n">tạo ra chế độ ăn uống của riêng bạn</string>
    <string name="xem_ch_dinh_d_ng_k_ho_ch_n_u_ng_c_a_t_i">Xem chế độ dinh dưỡng, kế hoạch ăn uống của tôi</string>
    <string name="danh_s_ch_c_c_th_c_ph_m_l_ng_calories">Danh sách các thực phẩm, lượng calories</string>
    <string name="th_c_ph_m_dinh_d_ng_th_thao">Thực phẩm dinh dưỡng thể thao</string>
    <string name="dinh_d_ng">Dinh Dưỡng</string>
    <string name="t_p_luy_n">Tập Luyện</string>
    <string name="th_nh_t_ch_now">Thành Tích</string>
    <string name="b_a_s_ng">Bữa sáng</string>
    <string name="b_a_tr_a">Bữa trưa</string>
    <string name="b_a_t_i">Bữa tối</string>
    <string name="trang_c_nh_n">TRANG CÁ NHÂN</string>
    <string name="t_i_kho_n_c_a_t_i">Tài khoản của tôi</string>
    <string name="c_i_t">Cài đặt</string>
    <string name="h_tr">Hỗ trợ</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="l_i_nh_c_t_p_luy_n">LỜI NHẮC TẬP LUYỆN</string>
    <string name="b_i_t_p">Bài tập:</string>
    <string name="kh_ng_c_b_i_t_p">Không có bài tập</string>
    <string name="ng_nh_p_b_ng_google">Đăng nhập bằng google</string>
    <string name="vui_l_ng_nh_p_gram">Vui lòng nhập gram</string>
    <string name="t_ng_kcal">Tổng kcal: %s</string>
</resources>