<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.meal_plan.MealPlanFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/last"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/btn_back_time"
            app:layout_constraintStart_toEndOf="@+id/btn_back_time"
            app:layout_constraintTop_toTopOf="@+id/btn_back_time">

            <TextView
                android:id="@+id/tv_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="Tháng 3"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="2025"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/btn_next_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ll_time"
            app:layout_constraintTop_toTopOf="@+id/ll_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_day_of_week"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rcv_day_of_week"
        app:layout_constraintTop_toBottomOf="@+id/rcv_day_of_week">

        <TextView
            android:id="@+id/tv_breakfast"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_meal_plan"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:text="@string/b_a_s_ng"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tv_lunch"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_meal_plan_gray"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:text="@string/b_a_tr_a"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/tv_dinner"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_meal_plan_gray"
            android:gravity="center"
            android:paddingVertical="15dp"
            android:text="@string/b_a_t_i"
            android:textColor="@color/black"
            android:textSize="11sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_count_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="2 foods"
        android:textSize="16sp"
        android:textColor="#303841"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_food"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView42"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
        app:layout_constraintStart_toStartOf="@+id/tv_count_food"
        app:layout_constraintTop_toBottomOf="@+id/tv_count_food"
        tools:listitem="@layout/layout_item_food" />

    <ImageView
        android:id="@+id/btn_add_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/add_food"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/t_ng_kcal"
        android:textColor="#303841"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rcv_food" />
</androidx.constraintlayout.widget.ConstraintLayout>