<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_reminder.AddReminderActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title_exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/th_m_l_i_nh_c"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_back_re"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back_meal" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/btn_back_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/last"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/ll_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_back_time"
                    app:layout_constraintStart_toEndOf="@+id/btn_back_time"
                    app:layout_constraintTop_toTopOf="@+id/btn_back_time">

                    <TextView
                        android:id="@+id/tv_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:text="Tháng 3"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="center"
                        android:text="2025"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/btn_next_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/next"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ll_time"
                    app:layout_constraintTop_toTopOf="@+id/ll_time" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/calendar_reminder" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/ng_y"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/imageView14"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_week"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout6"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout6"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="@+id/rcv_week"
            app:layout_constraintStart_toStartOf="@+id/rcv_week"
            app:layout_constraintTop_toBottomOf="@+id/rcv_week"
            app:srcCompat="@drawable/bg_reminer" />

        <TextView
            android:id="@+id/tv_date_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="Thursday"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/imageView15"
            app:layout_constraintTop_toTopOf="@+id/imageView15" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_date_of_week"
            app:layout_constraintEnd_toStartOf="@+id/tv_date_of_week"
            app:layout_constraintTop_toTopOf="@+id/tv_date_of_week"
            app:srcCompat="@drawable/mdi_calendar" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="WORKOUT"
            android:textColor="@color/white"
            android:textSize="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView15"
            app:layout_constraintEnd_toEndOf="@+id/imageView15" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView15"
            app:layout_constraintStart_toStartOf="@+id/imageView15"
            app:layout_constraintTop_toBottomOf="@+id/imageView15">

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textView33"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView33"
                app:srcCompat="@drawable/clock" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/th_i_gian"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView17"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_select_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_clock_reminder"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="13dp"
                android:paddingVertical="11dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="05:44 AM"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/btn_select_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/dow" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout7"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout7"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textView35"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView35"
                app:srcCompat="@drawable/vector" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/ch_l_i_nh_c"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/imageView19"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_on_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/b_t_th_ng_b_o"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/textView35"
                app:layout_constraintTop_toBottomOf="@+id/textView35" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="60dp"
                android:layout_height="34dp"
                android:checked="true"
                android:padding="5dp"
                android:showText="false"
                android:thumb="@drawable/custom_thumb"
                android:track="@drawable/custom_track"
                app:layout_constraintBottom_toBottomOf="@+id/tv_on_off"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView35" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/et_note"
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_et"
            android:ems="10"
            android:gravity="top|start"
            android:hint="@string/th_m_ghi_ch"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout8"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout8"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout8" />

        <TextView
            android:id="@+id/tv_add_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bg_add_save_redmine"
            android:paddingHorizontal="27dp"
            android:paddingVertical="10dp"
            android:text="@string/t_o_l_i_nh_c"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_note"
            app:layout_constraintTop_toBottomOf="@+id/et_note" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>